<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/loginMainView"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg_xd"
    tools:context=".ui.activity.LoginActivity">

    <TextView
        android:id="@+id/login_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/caveat_semibold"
        android:text="@string/welcome"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/text_40sp"
        android:layout_marginStart="@dimen/margin_10"
        android:layout_marginEnd="@dimen/margin_10"
        android:layout_marginTop="@dimen/margin_150"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/login_sub_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/caveat_regular"
        android:text="@string/login_to_continue"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/text_30sp"
        android:layout_marginStart="@dimen/margin_10"
        android:layout_marginEnd="@dimen/margin_10"
        android:layout_marginTop="@dimen/margin_10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_tv"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/loginView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_250"
        app:layout_constraintTop_toBottomOf="@id/login_sub_tv"
        android:layout_marginTop="@dimen/margin_10"
        android:layout_marginStart="@dimen/margin_10"
        android:layout_marginEnd="@dimen/margin_10">

        <EditText
            android:id="@+id/username_login_et"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:background="@drawable/custom_input"
            android:drawableStart="@drawable/ic_profile"
            android:drawablePadding="@dimen/margin_12"
            android:fontFamily="@font/poppins_regular"
            android:hint="@string/username"
            android:imeOptions="actionNext"
            android:maxLength="20"
            android:inputType="text"
            android:paddingStart="@dimen/margin_10"
            android:paddingEnd="@dimen/margin_10"
            android:textColor="@android:color/black"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/password_login_et"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:background="@drawable/custom_input"
            android:drawableStart="@drawable/ic_lock"
            android:drawablePadding="@dimen/margin_12"
            android:fontFamily="@font/poppins_regular"
            android:hint="@string/password"
            android:imeOptions="actionNext"
            android:maxLength="20"
            android:inputType="textPassword"
            android:paddingStart="@dimen/margin_10"
            android:paddingEnd="@dimen/margin_10"
            android:textColor="@android:color/black"
            android:layout_marginTop="@dimen/margin_20"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/username_login_et" />

        <Button
            android:id="@+id/login_btn"
            android:layout_width="0dp"
            android:text="@string/login"
            android:textColor="@color/white"
            android:fontFamily="@font/poppins_regular"
            android:layout_height="@dimen/margin_60"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password_login_et" />

        <TextView
            android:id="@+id/forgot_password_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/login_btn"
            android:layout_marginTop="@dimen/margin_10"
            app:layout_constraintStart_toStartOf="parent"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/forgot_password"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ProgressBar
        android:id="@+id/login_progress_bar"
        android:layout_width="@dimen/margin_80"
        android:layout_height="@dimen/margin_80"
        android:background="@drawable/circle_shape"
        android:indeterminateTint="@color/colorPrimary"
        android:padding="@dimen/margin_10"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>