...
    <string name="ppum_emergency_number_ori">03-79494422</string>

    <!-- Login/Register -->
    <string name="username">Username</string>
    <string name="user_registration_id">Registration ID</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="welcome">Welcome back 😁</string>
    <string name="login_to_continue">Login to continue</string>
    <string name="fill_in_all_fields">Fill in all fields</string>
    <string name="log_out">Log Out</string>
    <string name="patients_list">Patients List</string>
    <string name="chats">Chats</string>
...
